replace: our University name

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta property="og:site_name" content="traPortfolio" />
     <meta
       property="og:description"
-      content="東京工業大学デジタル創作同好会traPに所属する各部員の活動内容をまとめたポートフォリオサービスです。"
+      content="東京科学大学デジタル創作同好会traPに所属する各部員の活動内容をまとめたポートフォリオサービスです。"
     />
     <meta property="og:locale" content="ja_JP" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@traPtitech">
     <meta name="twitter:title" content="traPortfolio">
-    <meta name="twitter:description" content="東京工業大学デジタル創作同好会traPに所属する各部員の活動内容をまとめたポートフォリオサービスです。">
-    <meta name="description" content="東京工業大学デジタル創作同好会traPに所属する各部員の活動内容をまとめたポートフォリオサービスです。" />
+    <meta name="twitter:description" content="東京科学大学デジタル創作同好会traPに所属する各部員の活動内容をまとめたポートフォリオサービスです。">
+    <meta name="description" content="東京科学大学デジタル創作同好会traPに所属する各部員の活動内容をまとめたポートフォリオサービスです。" />
     <title>traPortfolio</title>
   </head>
   <body>
